# ai-likes-human

./: .gitignore  Cargo.toml  Makefile  README.md
async_llama_cpp/: Cargo.toml
async_llama_cpp/src/: async_llama_cpp.rs  backend_singleton.rs  cached_model_factory.rs  lib.rs  llama_cpp_builder.rs  model_context_factory.rs  options.rs
async_llama_cpp/src/llamacpp/: cached_model_factory.rs  llama_cpp.rs  mod.rs  model_context_factory.rs  model_factory.rs  options.rs
async_llama_cpp/tests/: invoke_test.rs
core/: .env.example  .gitignore  Cargo.toml  Makefile  README.md  ai-assistant-core.spec  entitlements.plist  makefile  pyproject.toml  sql_app.db
core/ai_assistant_core/: app_configuration.py  assistant_agent_factory.py  assistant_builder.py  assistant_prompt_builder.py  configuration.py  llm_provider_factory.py  main.py
core/ai_assistant_core/assistant/: __init__.py  module.py
core/ai_assistant_core/assistant/api/: route.py
core/ai_assistant_core/assistant/domain/: agent_builder.py  agent_factory.py  assistant_agent_factory.py  assistant_builder.py  assistant_prompt_builder.py  user_info_service.py  user_machine_info_service.py
core/ai_assistant_core/assistant/infrastructure/: run_schema.py  sqlalchemy_message_repository.py  sqlalchemy_run_repository.py  sqlalchemy_thread_repository.py  thread_message_schema.py  thread_schema.py
core/ai_assistant_core/configuration/: __init__.py  module.py
core/ai_assistant_core/configuration/api/: __init__.py  available_models_route.py  route.py
core/ai_assistant_core/configuration/domain/: available_model_service.py  dto.py  repository.py
core/ai_assistant_core/extension/: README.md  __init__.py  extension_module.py
core/ai_assistant_core/health/: route.py
core/ai_assistant_core/infrastructure/: __init__.py  migrator.py  session_factory.py  sqlalchemy_module.py
core/ai_assistant_core/llm/: __init__.py  module.py
core/ai_assistant_core/llm/api/: route.py
core/ai_assistant_core/prompts/: confidence_level.py
core/ai_assistant_core/tools/: __init__.py  module.py
core/ai_assistant_core/utils/: authorization_token.py  chat_agent_client.py
core/migration/: Cargo.toml
core/migration/src/: lib.rs  m20220101_000001_create_configuration_table.rs  m20220101_000002_create_thread_table.rs  m20220101_000004_create_message_table.rs  m20220101_000005_seed_default_llm_configuration.rs  m20220101_000006_create_profile_table.rs  m20220101_000007_seed_profile_software_engineer.rs
core/pyinstaller_hooks/: hook-llama_cpp.py
core/src/: .env.example  api_facade.rs  app_configuration.rs  app_container.rs  lib.rs
core/src/assistant/: mod.rs
core/src/chat_completion/: mod.rs
core/src/configuration/: mod.rs
core/src/entities/: GENERATED_DIRECTORY.md  message.rs  mod.rs  prelude.rs  profile.rs  run.rs
core/src/llm/: mod.rs
core/src/profile/: mod.rs
core/src/utils/: time.rs  time_test.rs
core/tests/: app_test_utils.rs  configuration_tests.rs  test_assistant_prompt_builder.py  test_llm_provider_factory.py
core/tests/infrastructure/: test_session_factory.py
core/tests/test_functional/: functional_test_utils.py  test_anthropic_assistant.py  test_chat_completion_api.py  test_configuration.py  test_configuration_kv.py  test_default_configuration_kv.py  test_extensions_inference.py  test_extensions_management.py  test_health.py  test_llm_local_models.py  test_openai_assistant.py  test_openai_assistant_thread_crud.py  test_openai_assistant_thread_delete.py  test_openai_chat_completion.py  test_pex_extensions_inference.py  test_pex_extensions_load.py  test_pex_extensions_management.py
core/tests/tools/: test_url_content_loader_tool.py
desktop/: Cargo.toml  copy-server-bin.sh  package.json  pnpm-lock.yaml  set-version.sh  tauri.conf.json
desktop/icons/: icon.icns  logo.icns
desktop/src/: configuration.rs  lib.rs  main.rs  system_tray.rs
desktop/src/app_state/: app_state.rs  app_state_factory.rs  mod.rs  sidecar_lifecycle_service.rs
desktop/src/core/: inference_server.rs  mod.rs  tauri_command.rs
desktop/src/screencapture/: mod.rs  permissions.rs  tauri_command.rs
extensions/joke/: README.md  makefile  pyproject.toml  requirements.txt
extensions/joke/joke_extension/: __init__.py  extension.py  main.py
extensions/joke/test/: test_extension.py
extensions/joke_extension/: pyproject.toml
extensions/joke_extension/joke_extension/: extension.py
rust-core/: Cargo.toml  Makefile  README.md  diesel.toml
rust-core/inference_server/: Cargo.toml
rust-core/inference_server/src/: app.rs  lib.rs  openai_v1_router.rs  router_factory.rs
rust-core/inference_server/tests/: assistant_api_create_thread_and_run_test.rs  assistant_api_create_thread_runs_test.rs  assistant_api_create_thread_test.rs  assistant_api_delete_thread_test.rs  assistant_api_stream_run_test.rs  assistant_api_update_thread_test.rs  health.rs  invoke_chat_completions.rs  invoke_chat_completions_test.rs  preflight_test.rs  stream_chat_completions.rs  stream_chat_completions_test.rs
rust-core/migration/src/: lib.rs  m20220101_000001_create_configuration_table.rs  m20220101_000002_create_message_table.rs  m20220101_000002_create_thread_table.rs  m20220101_000003_create_run_table.rs  m20220101_000004_create_message_table.rs
rust-core/migrations/2024-09-10-162043_create_configuration/: down.sql  up.sql
rust-core/openai-server-api/: Cargo.toml
rust-core/openai-server-api/src/: app.rs  app_state.rs  lib.rs  main.rs  router_factory.rs  trace.rs
rust-core/openai-server-api/tests/: chat_completions.rs  health.rs  server.rs  stream_chat_completions.rs  test_utils.rs
rust-core/src/: api_facade.rs  app_configuration.rs  app_container.rs  lib.rs  main.rs  schema.rs
rust-core/src/agent/: mod.rs
rust-core/src/assistant/: mod.rs
rust-core/src/configuration/: mod.rs
rust-core/src/entities/: configuration.rs  message.rs  mod.rs  prelude.rs  run.rs  thread.rs
rust-core/src/llm/: mod.rs
rust-core/src/utils/: mod.rs  time.rs  types.rs
rust-core/tests/: agent_inference.rs  app_test_utils.rs  configuration.rs  default_configuration_tests.rs
(+871 files in other folders)
