[package]
name = "async_llama_cpp"
version = "0.1.0"
edition = "2021"

[dependencies]
llama-cpp-2 = { version = "0.1.81", features = ["metal"] }
llama-cpp-sys-2 = { version = "0.1.81", features = ["metal"] }
encoding_rs = "0.8.34"
futures = "0.3.30"
async-stream = "0.3.5"
anyhow = "1.0.89"
tokio = { version = "1.40.0", features = ["full"] }
async-trait = "0.1.82"
num_cpus = "1.16.0"

[dev-dependencies]
mockall = "0.13.0"
pretty_assertions = "1.4.1"
shellexpand = "3.1.0"
