[package]
name = "app"
version = "0.1.0"
description = "AI Likes Human"
authors = ["Samuel Magny"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.2", features = [] }

[dependencies]
app-core = { path = "../rust-core" }
openai-server-api = { path = "../rust-core/openai-server-api" }
command-group = "2.1.0"
serde_json = "1.0"
dirs = "5.0"
log = "^0.4"
tracing = "0.1"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
tauri-plugin-window-state = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v1" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.8", features = [
    "system-tray",
    "api-all",
    "process-command-api",
] }
xcap = "=0.0.1"
base64 = "0.22.1"
image = "=0.24.9"
rayon = "1.10.0"
fast_image_resize = "4.0.0"
ureq = "2.10.0"
libc = "0.2.155"
futures = "0.3.30"
tokio = "1.40.0"
async-stream = "0.3.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
