[package]
name = "app-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
sea-orm = { version = "^0.12.0", features = [
    "sqlx-sqlite",
    "runtime-async-std-native-tls",
    "macros",
] }
migration = { path = "./migration" }
openai-server-api = { path = "./openai-server-api" }
sea-orm-migration = "^0.12.0"
# langchain-rust = { version = "4.4.2", features = ["sqlite"] }
langchain-rust = { version = "4.4.2", features = [] }
platform-dirs = "0.3.0"
serde = "1.0.210"
shaku = "0.6.2"
futures = "0.3.30"
tokio = "1.40.0"

[dev-dependencies]
serial_test = "3.1.1"
