[package]
name = "app-core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
sea-orm = { version = "^0.12.0", features = [
    "sqlx-sqlite",
    "runtime-async-std-native-tls",
    "macros",
] }
migration = { path = "./migration" }
sea-orm-migration = "^0.12.0"
platform-dirs = "0.3.0"
serde = "1.0.210"
futures = "0.3.30"
tokio = "1.40.0"
# langchain-rust = { version = "4.4.2", features = [] }
langchain-rust = { git = "https://github.com/samuelint/langchain-rust", branch = "main" }
mockall = "0.13.0"
serde_json = "1.0.128"
chrono = "0.4.38"
async-stream = "0.3.5"
anyhow = "1.0.89"

[dev-dependencies]
mockall = "0.13.0"
serial_test = "3.1.1"
