[tool.poetry]
name = "joke-extension"
version = "0.1.0"
description = ""
authors = ["Samuel <samuelint@gmail.com>"]
readme = "README.md"
packages = [{ include = "joke_extension" }]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
base-assistant-extension = "^0.6.5"
langchain-core = "^0.2.28"
langchain-openai = "^0.1.20"
uvicorn = "^0.30.5"
fastapi = "^0.112.0"
langgraph = "^0.1.19"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pyinstaller = "^6.8.0"
langchain-openai = "^0.1.17"
pytest = "^8.3.2"
pex = "^2.14.1"

[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.23.7"
decoy = "^2.1.1"

[tool.poetry.extras]
langchain = ["langchain"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
