[tool.poetry]
name = "joke-extension"
version = "0.1.0"
description = ""
authors = ["Samuel <samuelint@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
langchain = { version = "^0.2.6", optional = true }
base-assistant-extension = "0.2.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pyinstaller = "^6.8.0"

[tool.poetry.group.test]
[tool.poetry.group.test.dependencies]
pytest = "^8.2.1"
pytest-watch = "^4.2.0"
pytest-asyncio = "^0.23.7"
decoy = "^2.1.1"

[tool.poetry.extras]
langchain = ["langchain"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
